# anchor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.example.yaml
config/: anchor.example.toml
docs/: DEPLOYMENT.md  HANDOFF.md
packaging/caddy/: Caddyfile
packaging/debian/: postinst  postrm  prerm
packaging/systemd/: anchor.service
src/: app.rs  cli.rs  config.rs  console.rs  enrollment.rs  error.rs  heartbeat.rs  lib.rs  main.rs  protocol.rs
src/api/: mod.rs
src/console/: agent.rs  mod.rs  relay.rs
src/panel/: heartbeat.rs  mod.rs
src/protocol/: mod.rs
