[package]
name = "anchor"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/ConvoyPanel/anchor"
description = "Headless console agent and relay for Convoy"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
codegen-units = 1
lto = true
strip = true

